# pixiv_util

./: Cargo.toml  README.md
src/: abstractions.rs  cookie_file.rs  cookie_mgmt.rs  download.rs  download_novel.rs  file_download.rs  find_not_bookmarked.rs  gen_http_client.rs  incremental.rs  main.rs  parsers.rs  tasks.rs  update_file.rs  user_mgmt.rs
src/api_calls/: illust.rs  illust_pages.rs  mod.rs  novel.rs  series.rs  ugoira_meta.rs  user_bookmarks.rs  user_illustmanga_tag.rs  user_info.rs
src/download/: illust.rs  mod.rs  novel.rs  update.rs
src/download/illust/: individual.rs  mod.rs  series.rs  single.rs  user_bookmarks.rs  user_posts.rs
