[package]
name = "pixiv_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive"] }
dirs = "5.0.0"
reqwest = { version = "0.11.16", features = ["json", "stream", "gzip"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.44"
tokio = { version = "1.28.0", features = ["full"] }
tokio-stream = "0.1.14"
